--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test":"mocha client/src/models/specs --reporter nyan",
+    "start": "nodemon server.js",
+    "test": "mocha client/src/models/specs --reporter nyan",
     "bundle": "webpack -w"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "mocha": "^3.2.0",
